--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -77,6 +77,7 @@ header>nav>ul {
 .navbar-menu {
   transition: transform 2s ease-out;
 }
+
 /* .navbar-menu img {
   display: none;
 } */
@@ -232,9 +233,11 @@ header>nav>ul {
   border-bottom-left-radius: 8px 8px;
   background-color: transparent;
 }
-.navbar-logo{
+
+.navbar-logo {
   display: none;
 }
+
 .right-btm {
   height: 5.7rem;
   width: 41rem;
@@ -842,7 +845,7 @@ p {
 
 #final-content-wrapper {
   display: flex;
-  width: 74%;
+  /* width: 74%; */
   margin: auto;
   gap: 220px;
   align-items: center;
@@ -1380,7 +1383,7 @@ footer {
   }
 
   .download-options2 {
-    height: 50px;
+    height: 45px;
   }
 
   #download-card {
@@ -1389,7 +1392,7 @@ footer {
 
   #download-options-wrapper {
     position: relative;
-    top: -6px;
+    /* top: -6px; */
   }
 
   #card-content {
@@ -1404,7 +1407,7 @@ footer {
   }
 
   .download-options {
-    height: 50px;
+    height: 45px;
   }
 
   /* Porfolio Content */
@@ -1715,11 +1718,16 @@ footer {
 
 @media (max-width: 1100px) {
   .fantasy h2 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 
   .fantasy span {
     font-size: 1rem;
+  }
+
+  .side-line {
+    width: .7rem;
+    height: 4.7rem;
   }
 
   #gm-car {
@@ -1732,6 +1740,19 @@ footer {
 
   .up-text {
     font-size: 58px;
+  }
+
+  #download-options-wrapper {
+    gap: 1.6rem;
+  }
+
+  .download-options,
+  .download-options2 {
+    height: 40px;
+  }
+
+  .play-store p {
+    font-size: 10px;
   }
 }
 
@@ -1766,9 +1787,13 @@ footer {
     font-size: .8rem;
   }
 
+  #download-options-wrapper {
+    gap: 1.2rem;
+  }
+
   .side-line {
     height: 4.5rem;
-    width: 13px;
+    width: .7rem;
   }
 }
 
@@ -1792,6 +1817,17 @@ footer {
 
   .earn-div {
     font-size: 1.4rem;
+  }
+
+  .play-store {
+    margin-right: 2rem;
+  }
+}
+
+@media(max-width:900px) {
+
+  #final-content-wrapper>p {
+    font-size: 16px;
   }
 }
 
@@ -1826,6 +1862,10 @@ footer {
 
   #gm-car {
     margin-top: 115px;
+  }
+
+  .play-store {
+    margin-right: 1rem;
   }
 }
 
