--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -839,8 +839,9 @@ p {
 }
 
 #final {
-  height: 220px;
+  height: auto;
   margin-top: 70px;
+  margin-bottom: 72px;
 }
 
 #final-content-wrapper {
@@ -1479,8 +1480,9 @@ footer {
 
   /* Footer */
   #final {
-    height: 180px;
+    height: auto;
     margin-top: 50px;
+    margin-bottom: 64px;
   }
 
   #final-content-wrapper {
@@ -1824,13 +1826,6 @@ footer {
   }
 }
 
-@media(max-width:900px) {
-
-  #final-content-wrapper>p {
-    font-size: 16px;
-  }
-}
-
 @media (max-width: 880px) {
   #gm-car {
     margin-top: 100px;
@@ -1882,6 +1877,11 @@ footer {
   .up-div {
     display: none;
   }
+
+  #final-content-wrapper>p {
+    font-size: 16px;
+  }
+
 }
 
 @media (min-width: 500px) and (max-width: 580px) {
@@ -2412,6 +2412,11 @@ footer {
   #final {
     margin-bottom: 4rem;
   }
+
+  #final-content-wrapper>p {
+    font-size: 18px;
+  }
+
 }
 
 @media (min-width: 964px) and (max-width: 999px) {
