--- a/assets/styles/about-mobile.css
+++ b/assets/styles/about-mobile.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 780px) {
+  #about {
+    overflow-x: unset;
+  }
   #about-vertical-title {
     display: none;
   }
@@ -49,6 +52,7 @@
     font-size: 3.2rem;
     font-weight: 500;
     -webkit-text-stroke: 1px #d21717;
+    color: black;
   }
   .carf-row2-mobile {
     display: flex;
@@ -56,7 +60,7 @@
     margin-top: -0.5rem;
     color: #e3e3e3;
     font-family: formula-bold;
-    font-size: 2.2rem;
+    font-size: 1.9rem;
     font-weight: 500;
   }
   .hero-car {
@@ -93,13 +97,13 @@
   #corevalue-section {
     display: none;
   }
-  #core-section-mobile{
+  #core-section-mobile {
     position: absolute;
-    
-    display:block;
-    width:100vw;
-    height:500px;
-    border:2px solid red;
+    top: 57%;
+    display: unset;
+    width: 100vw;
+    height: 1000px;
+    /* border: 2px solid red; */
   }
   .cs-title-mobile {
     display: flex;
@@ -113,12 +117,107 @@
     font-size: 3rem;
     font-weight: 500;
     -webkit-text-stroke: 2px #2beae2;
+    color:black;
+  }
+  .core1-mobile {
+    position: relative;
+    height: 256.215px;
+    width: 171px;
+    /* border: 2px solid red; */
+  }
+  .core1-content-mobile {
+    display: flex;
+    margin-left: 20px;
+  }
+  .cc-content1-mobile {
+    font-family: formula-bold;
+    font-size: 7rem;
+    -webkit-text-stroke: 2px #d21717;
+    position: absolute;
+    top: 40%;
+  }
+  .trophy1-mobile {
+    height: 250px;
+    width: 171px;
+    margin-top: -0.5rem;
+    position: absolute;
+    top: 1%;
+  }
+  .core1-content-mobile-right {
+    width: 210px;
+    height: 160px;
+    /* border: 2px solid purple; */
+    position: absolute;
+    /* right: -120%; */
+    right: 4%;
+    top: 15%;
+  }
+  .core-border-mobile {
+    width: 31px;
+    height: 4px;
+    margin-bottom: 14px;
+    background-color: #fcfcfc;
+  }
+  .trophy1-title-mobile,
+  .trophy2-title-mobile,
+  .trophy3-title-mobile {
+    color: #2beae2;
+    font-family: formula-reg;
+    font-size: 18px;
+    margin-bottom: 19px;
+    font-weight: 400;
+    width: 169px;
+  }
+  .trophy1-desc-mobile,
+  .trophy1-desc2-mobile {
+    color: #989494;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    width: 221px;
+  }
+  .trophy1-desc2-mobile {
+    width: 210px;
+    position: absolute;
+    /* top: 105%; */
+    margin-top: 1rem;
+    left: 4%;
+  }
+  .core2-content-mobile {
+    width: 153.937px;
+    height: 259.931px;
+    position: absolute;
+    right: 0%;
+    /* border: 2px solid green; */
+  }
+  .trophy2-mobile {
+    width: 163.937px;
+    height: 259.931px;
+    position: absolute;
+    left: -4%;
+  }
+  .cc-content2-mobile {
+    font-family: formula-bold;
+    font-size: 7rem;
+    -webkit-text-stroke: 2px #d21717;
+    position: absolute;
+    top: 40%;
+    margin-right: -2rem;
+  }
+  .core2-content-mobile-right {
+    position: absolute;
+    width: 157px;
+    height: 77px;
+    /* border: 2px solid purple; */
+    top: 47%;
+    margin-left: 43px;
   }
   .cs-content-mobile {
     display: flex;
     flex-direction: column;
     margin-left: 40px;
-    margin-top:0.8rem;
+    margin-top: 0.8rem;
   }
   .cs-content1-mobile {
     color: #292929;
@@ -138,13 +237,67 @@
   }
   .cs-title-2-mobile {
     position: absolute;
-    right:1.5%;
+    right: 1.5%;
     text-align: center;
     font-family: formula-bold;
     font-size: 56px;
     font-weight: 500;
     -webkit-text-stroke: 2px #2beae2;
-    margin-top:-0.7rem;
+    margin-top: -0.7rem;
+    color: black;
+  }
+  .trophy2-desc-mobile {
+    color: #989494;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    width: 238px;
+    position: absolute;
+    right: 2%;
+    top: 59%;
+  }
+  .core3-content-mobile {
+    width: 155px;
+    height: 247.597px;
+    /* border: 2px solid blue; */
+    position: absolute;
+    top: 57%;
+    left: 1%;
+  }
+  .trophy3-mobile {
+    width: 155px;
+    height: 247.597px;
+    position: absolute;
+    left: 5%;
+  }
+  .cc-content3-mobile {
+    font-family: formula-bold;
+    font-size: 7rem;
+    -webkit-text-stroke: 2px #d21717;
+    position: absolute;
+    top: 40%;
+    margin-right: -2rem;
+    margin-top: -1rem;
+  }
+  .core3-content-mobile-right {
+    width: 218px;
+    /* border: 2px solid violet; */
+    position: absolute;
+    right: 2%;
+    top: 71%;
+  }
+  .trophy3-desc-mobile {
+    color: #989494;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    width: 295px;
+    /* border: 2px solid blue; */
+    position: absolute;
+    top: 81%;
+    left: 10%;
   }
   .core-title1 {
     font-size: 7.75rem;
@@ -213,19 +366,20 @@
   .aboutline-1 {
     width: 54px;
     height: 72px;
-    top: 42%;
+    top: 137%;
   }
   .aboutline-2 {
     width: 72px;
     height: 116px;
-    top: 42%;
+    top: 138%;
   }
   .aboutline-3 {
     width: 52px;
     height: 87px;
-    top: 44%;
+    top: 141%;
   }
   .about-last {
+    display: none;
     height: unset;
     justify-content: space-between;
     margin-top: 53px;
@@ -272,6 +426,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    display: none;
   }
   .al-page-navigation-1200 {
     display: flex;
@@ -307,8 +462,13 @@
     margin-top: 18px;
   }
   .about-contact {
-    height: 199px;
+    /* display: none; */
+    height: 122px;
     margin: 34px 0;
+    position: absolute;
+    top: 137%;
+    flex-direction: column;
+    width:100vw;
   }
   .about-contact-content {
     width: 648.145px;
@@ -317,35 +477,36 @@
     display: none;
   }
   .about-arrow-1200 {
-    display: unset;
-    width: 375px;
-    height: 44px;
-    position: absolute;
-    bottom: 0%;
+    display: none;
   }
   .about-contact-details-1200 {
     display: unset;
   }
   .about-cc-1 {
-    font-size: 3.0625rem;
+    font-size: 2.25rem;
+    left: 2%;
   }
   .about-cc-2 {
-    font-size: 4.375rem;
+    font-size: 3.5rem;
+    left: 2%;
   }
   /* 1200 */
   .about-contact-details-1200 {
-    width: 532px;
-    height: inherit;
-    /* border: 2px solid yellow; */
+    width: 100vw;
+    height: 192px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: absolute;
+    top: 129%;
   }
   .ac-details-1-1200 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    width: 261px;
+    margin: 0 auto;
   }
   .acd-1-1200,
   .acd-2-1200,
@@ -370,5 +531,122 @@
     font-size: 0.8rem;
     font-weight: 500;
     padding-left: 1.5rem;
+  }
+  .contact-arrow-mobile {
+    display: unset;
+    width: 195px;
+    height: 29.9px;
+    position: absolute;
+    top: 174%;
+    right:0%;
+  }
+  .about-last-mobile {
+    display: unset;
+    width: 100vw;
+    position: absolute;
+    top: 176%;
+    margin-top:4rem;
+  }
+  .about-last1-mobile {
+    margin-top: 13px;
+    height: 184px;
+    /* border: 2px solid purple; */
+    position: relative;
+  }
+  .alm-last1-1 {
+    color: #e3e3e3;
+    font-family: formula-bold;
+    font-size: 56px;
+    font-weight: 500;
+    position: absolute;
+    top: 1%;
+  }
+  .alm-last1-2 {
+    font-family: formula-bold;
+    font-size: 72px;
+    font-weight: 500;
+    -webkit-text-stroke: 2px #d21717;
+    margin-top: 30px;
+    margin-left: 20px;
+    color:black;
+    position: absolute;
+    top: 2%;
+  }
+  .alm-last1-img {
+    width: 197px;
+    height: 165px;
+    position: absolute;
+    right: 0%;
+    top: 10%;
+  }
+  .about-last2-mobile {
+    height: 201px;
+    /* border: 2px solid blue; */
+  }
+  .alm-last2-1 {
+    color: #2beae2;
+    width: 342px;
+    font-family: formula-reg;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 0 auto;
+  }
+  .alm-last2-2 {
+    color: #bababa;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 500;
+    width: 332px;
+    margin: 0 auto;
+    margin-top: 21px;
+  }
+  .about-mobile-navigation {
+    height: 79px;
+    /* border: 2px solid gold; */
+    position: relative;
+    display: flex; 
+    flex-direction: column;
+  }
+  .amv-1,.amv-2{
+    display: flex;
+    gap:0.4rem;
+  }
+  .amv-1{
+    position: absolute;
+    left:2%;
+  }
+  .amv-2{
+    position: absolute;
+    right:2%;
+    bottom: 0%;
+  }
+  .amv-arrow1,.amv-arrow2 {
+    width: 17px;
+    height: 16px;
+  }
+  .amv-desc-1,.amv-desc-2 {
+    color: #e3e3e3;
+    font-family: formula-bold;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  .amv-border{
+    width:100%;
+    height:4px;
+    background-color: #d21717;
+    margin-top:38px;
+    margin-bottom: 19px;
+  }
+  .amv-arrow2{
+    transform: rotate(-180deg);
+  }
+  #about-footer{
+    position: absolute;
+    width: 100vw;
+    top:231%;
   }
 }
