--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -180,6 +180,7 @@ body {
   font-family: formula-bold;
   font-size: 5.494rem;
   font-weight: 500;
+  color:black;
   -webkit-text-stroke: 2px #d21717;
 }
 .carf-text2 {
@@ -188,6 +189,7 @@ body {
   font-size: 3.99rem;
   font-weight: 500;
   margin-bottom: 0.5rem;
+
 }
 .carf-text3 {
   color: #e3e3e3;
@@ -214,6 +216,7 @@ body {
   font-size: 8rem;
   font-weight: 500;
   -webkit-text-stroke: 2px #2beae2;
+  color:black;
 }
 .core-title-1 {
   width: 400px;
@@ -244,6 +247,7 @@ body {
   font-size: 14.25rem;
   font-weight: 500;
   -webkit-text-stroke: 2px #d21717;
+  color: #0a0a0a;
 }
 .trophy2 {
   width: 188px;
@@ -299,6 +303,7 @@ body {
   font-weight: 500;
   -webkit-text-stroke: 2px #d21717;
   margin-top: 120px;
+  color: black;
 }
 .core-1-title > p {
   color: #2beae2;
@@ -333,6 +338,7 @@ body {
   font-weight: 500;
   -webkit-text-stroke: 2px #d21717;
   margin-top: 73px;
+  color:black;
 }
 .core-3-title > p {
   color: #2beae2;
@@ -417,6 +423,7 @@ body {
   position: absolute;
   top: 43%;
   left: calc(-1%);
+  color:#0a0a0a;
 }
 .about-contact-details {
   width: 1101px;
@@ -505,6 +512,7 @@ body {
   font-weight: 500;
   -webkit-text-stroke: 2px #d21717;
   margin-left: 146px;
+  color: #0a0a0a;
 }
 .ar-content2 {
   color: #e3e3e3;
@@ -568,7 +576,15 @@ body {
 #core-section-mobile{
  display: none;
 }
-
+.about-contact-mobile{
+  display:none;
+}
+.contact-arrow-mobile{
+  display: none;
+}
+.about-last-mobile{
+  display: none;
+}
 /* greater than 1807px width */
 @media (min-width: 1807px) {
   #about {
@@ -869,6 +885,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
   }
   .al-page-navigation-1200 {
     display: flex;
@@ -1076,6 +1093,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
   }
   .al-page-navigation-1200 {
     display: flex;
@@ -1282,6 +1300,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
   }
   .al-page-navigation-1200 {
     display: flex;
@@ -1496,6 +1515,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
   }
   .al-page-navigation-1200 {
     display: flex;
@@ -1725,6 +1745,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
+
   }
   .al-page-navigation-1200 {
     display: flex;
@@ -1987,6 +2009,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
+
   }
   .al-page-navigation-1200 {
     display: flex;
@@ -2281,6 +2305,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
+
   }
   .al-page-navigation-1200 {
     display: flex;
