--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -56,9 +56,9 @@ header>nav>ul {
 #hamburger-menu-wrapper {
   display: none;
 }
-/* #navbarlogo{
+#navbarlogo{
   display: none;
-} */
+}
 
 #drop-arrow {
   margin-left: 10px;
