--- a/assets/styles/about-mobile.css
+++ b/assets/styles/about-mobile.css
@@ -135,6 +135,7 @@
     -webkit-text-stroke: 2px #d21717;
     position: absolute;
     top: 40%;
+    color:black;
   }
   .trophy1-mobile {
     height: 250px;
@@ -204,6 +205,7 @@
     position: absolute;
     top: 40%;
     margin-right: -2rem;
+    color:black;
   }
   .core2-content-mobile-right {
     position: absolute;
@@ -279,6 +281,7 @@
     top: 40%;
     margin-right: -2rem;
     margin-top: -1rem;
+    color:black;
   }
   .core3-content-mobile-right {
     width: 218px;
