--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -426,7 +426,8 @@
   .foot-links {
     display: flex;
     justify-content: center;
-    margin-left: 2.4rem;
+    margin-left: 1.7rem;
+    margin-right: 1.7rem;
   }
 
   #footer-content-m li {
@@ -482,6 +483,14 @@
     width: 22rem;
     margin: auto;
     margin-top: 18px;
+  }
+
+  .center-align {
+    text-align: center;
+  }
+
+  .right-align {
+    text-align: right;
   }
 
   #footer-subcard {
@@ -943,6 +952,13 @@
   }
 }
 
+@media (max-width:525px) {
+  #footer-card p {
+    font-size: 13px;
+    margin-top: .7rem;
+  }
+}
+
 @media (max-width:500px) {
   #footer-card-header {
     margin-top: 1rem;
@@ -965,6 +981,46 @@
     height: 40px;
     width: 50px;
     margin-left: -1rem;
+  }
+}
+
+@media (max-width: 484px) {
+
+  .copyright p {
+    margin-left: 5rem;
+  }
+
+  #footer-card-header {
+    width: 40vw;
+    padding-right: 5px;
+  }
+
+  #footer-card {
+    margin-top: 1rem;
+  }
+
+  #footer-card p {
+    margin-top: 8px;
+  }
+}
+
+@media (max-width: 456px) {
+  #footer-card p {
+    font-size: 12px;
+  }
+
+  #footer-card-header {
+    margin-top: .6rem;
+    height: 2.5rem;
+    width: 11rem;
+  }
+
+  #footer-subcard {
+    margin-top: 1.5rem;
+  }
+
+  .foot-links {
+    margin-top: -.6rem;
   }
 }
 
@@ -1020,6 +1076,23 @@
   }
 }
 
+@media (max-width:415px) {
+  #footer-card p {
+    margin-top: 8px;
+    font-size: 10px;
+  }
+
+  #footer-card-header {
+    margin-top: 8px;
+  }
+}
+
+@media(max-width:400px) {
+  .copyright p {
+    margin-left: 3rem;
+  }
+}
+
 @media(max-width:390px) {
   #footer-card p {
     margin-top: .6rem;
@@ -1054,6 +1127,26 @@
 
   #footer-card-header {
     margin-top: .6rem;
+  }
+}
+
+@media(max-width:383px) {
+  .raceline {
+    width: 7rem;
+  }
+
+  #footer-card-header {
+    width: 12rem;
+    height: 2.3rem;
+  }
+
+  #footer-card p {
+    margin-top: 5px;
+    font-size: 11px;
+  }
+
+  #footer-subcard {
+    margin-top: 1.4rem;
   }
 }
 
