--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -1,8 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+.footer-text-racingline {
+  font-size: 8px;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  margin: auto;
+  padding-right: 1.5rem;
+}
+
+.foot-link-div {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1.5rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.footer-link {
+  font-size: 1rem;
+  text-decoration: none;
+  display: inline;
+  color: white;
+}
+
+@media (min-width: 500px) and (max-width: 780px) {
+  .footer-text-racingline {
+    font-size: 12px;
+  }
+}
 
 @media (max-width: 780px) {
   #main {
-    padding-bottom: 140px;
+    padding-bottom: 40px;
     overflow: hidden;
   }
 
@@ -11,11 +42,11 @@
     padding: 0 30px;
   }
 
-  header>#logo {
+  header > #logo {
     height: 24px;
   }
 
-  header>nav {
+  header > nav {
     /* display: none; */
   }
 
@@ -23,7 +54,7 @@
     display: unset;
     margin: 2rem;
   }
-  #navbarlogo{
+  #navbarlogo {
     display: unset;
   }
   #hamburger-menu-wrapper {
@@ -187,7 +218,8 @@
     font-family: formula-reg;
   }
 
-  #download-options-wrapper-m {}
+  #download-options-wrapper-m {
+  }
 
   .download-options-m {
     display: block;
@@ -282,11 +314,11 @@
     z-index: 10;
   }
 
-  .gm-content-card>h4 {
+  .gm-content-card > h4 {
     font-size: 36px;
   }
 
-  .gm-content-card>h4::after {
+  .gm-content-card > h4::after {
     content: "";
     height: 8px;
     width: 70px;
@@ -296,14 +328,14 @@
     margin-top: 10px;
   }
 
-  .gm-content-card>p {
+  .gm-content-card > p {
     font-size: 18px;
     color: #989494;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
   }
 
-  .gm-content-card>h6 {
+  .gm-content-card > h6 {
     font-family: "Poppins", sans-serif;
     font-style: italic;
     font-size: 32px;
@@ -383,7 +415,7 @@
     gap: 60px;
   }
 
-  #final-content-wrapper>p {
+  #final-content-wrapper > p {
     font-size: 18px;
   }
 
@@ -399,7 +431,8 @@
 
   footer {
     max-height: 560px;
-    height: auto;
+    min-height: 260px;
+    /* height: auto; */
     position: relative;
   }
 
@@ -419,10 +452,8 @@
   #footer-content-m {
     display: block;
     position: absolute;
-    top: 0;
-    /* left: 50%; */
-    /* transform: translateX(-50%);   */
-    padding-top: 17px;
+    bottom: 0;
+    width: 100%;
   }
 
   .foot-links {
@@ -432,32 +463,18 @@
     margin-right: 1.7rem;
   }
 
-  #footer-content-m li {
-    list-style: none;
-    text-decoration: underline;
-    font-size: 1.4rem;
-    margin-top: 1.6rem;
-  }
-
   #footer-card {
     margin-top: 2rem;
     background-color: #d41919;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     display: flex;
-    width: 100vw;
+    padding: 1rem;
   }
 
-  #footer-card-header {
-    height: 45px;
-    width: 11.5rem;
-    border-radius: 6px;
-    background-color: #FFF;
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    box-sizing: border-box;
-    margin-right: 1rem;
-    margin-top: 1rem;
+  #subcard-footer-arrow {
+    height: 12px;
+    width: auto;
   }
 
   /* ///////////// here //////////////////////// */
@@ -474,17 +491,6 @@
   #footer-card-hearer-text-heading {
     display: block;
     font-size: 18px;
-  }
-
-  #footer-card p {
-    font-size: 16px;
-    color: #FFF;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600;
-    line-height: 20px;
-    width: 22rem;
-    margin: auto;
-    margin-top: 18px;
   }
 
   .center-align {
@@ -504,45 +510,55 @@
   }
 
   #footer-subcard-logo {
-    height: 50px;
-    /* min-width: 70px; */
+    height: 40px;
+    width: 40px;
     background-color: #ffffff;
     border-radius: 8px;
     display: flex;
+    flex-shrink: 0;
     justify-content: center;
     align-items: center;
     padding: 10px;
   }
 
   #footer-subcard-logo img {
-    height: 32px;
+    height: 20px;
   }
 
   #footer-subcard-content {
     display: flex;
     align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    margin-right: 2rem;
   }
 
-  .copyright p {
-    font-size: 1rem;
+  .podiumpe-head-mobile-footer {
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  .podiumpe-text-mobile-footer {
+    font-size: 10px;
+    font-weight: 200;
+    font-family: formula-reg;
+    margin-top: 6px;
+  }
+
+  .copyright-text-mobile {
+    font-size: 12px;
     text-align: right;
-    margin-left: 10rem;
     font-weight: normal;
     font-family: formula-reg;
   }
 
-  #footer-subcard-content h4 {
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 500;
-  }
-
-  .left-side p {
-    font-size: 12px;
-    font-weight: 200;
-    font-family: formula-reg;
-    width: 10rem;
-    margin-top: 8px;
+  .footer-logo-div-racingline {
+    border-radius: 6px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    padding: 6px 12px;
+    box-sizing: border-box;
   }
 
   #download-card-m-content h2 {
@@ -627,6 +643,11 @@
     font-size: 18px;
     position: relative;
     z-index: 200;
+  }
+
+  .raceline {
+    height: 24px;
+    width: auto;
   }
 
   .num-card-row2 {
@@ -745,7 +766,6 @@
   #category-dropmenu {
     display: none;
   }
-
 }
 
 @media (max-width: 425px) {
@@ -773,7 +793,7 @@
   #download-card-m-content h2 {
     font-size: 1.2rem;
     margin-left: 2rem;
-    margin-top: .1rem;
+    margin-top: 0.1rem;
   }
 
   #download-card-m-content span {
@@ -797,7 +817,7 @@
   #download-card-m-content h2 {
     font-size: 1.1rem;
     margin-left: 3rem;
-    margin-top: .1rem;
+    margin-top: 0.1rem;
   }
 
   #download-card-m-content span {
@@ -821,131 +841,15 @@
   }
 }
 
-@media (min-width:500px) and (max-width:780px) {
-  #footer-card {
-    height: 149px;
-  }
-}
-
-@media (min-width:660px) and (max-width: 703px) {
-  #footer-card-header {
-    margin-top: 1.5rem;
-    margin-right: 1.5rem;
-  }
-
-  #footer-card p {
-    margin-top: 1.5rem;
-    margin-left: 1.5rem;
-  }
-
-  .copyright p {
-    margin-left: 14rem;
-  }
-
-  #footer-content-m li {
-    font-size: 1.5rem;
-  }
-}
-
-@media (min-width:703px) and (max-width: 740px) {
-  #footer-card-header {
-    margin-top: 1.5rem;
-    margin-right: 1.5rem;
-  }
-
-  #footer-card p {
-    margin-top: 1.5rem;
-    margin-left: 1.5rem;
-  }
-
-  .copyright p {
-    margin-left: 18rem;
-  }
-
-  #footer-content-m li {
-    font-size: 1.7rem;
-    margin-left: 2rem;
-  }
-}
-
-@media(min-width: 740px) and (max-width: 780px) {
-
-  #footer-content-m li {
-    font-size: 1.7rem;
-    margin-left: 2rem;
-  }
-
-  #footer-card p {
-    margin-top: 1.5rem;
-    margin-left: 2rem;
-  }
-
-  #footer-card-header {
-    margin-top: 1.5rem;
-    margin-right: 2rem;
-  }
-
-  .copyright p {
-    margin-left: 20rem;
-  }
-}
-
-@media(max-width: 600px) {
-
-  #footer-content-m li {
-    font-size: 1.35rem;
-    margin-left: 1rem;
-    margin-top: 0.6rem;
-  }
-}
-
 @media (max-width: 570px) {
-  #footer-content-m li {
-    font-size: 3.5vw;
-    margin-left: 1rem;
-    margin-top: 0.6rem;
-  }
-
-  #footer-card p {
-    margin-top: 1.5rem;
-    margin-left: 1.5rem;
-    font-size: 15px;
-    width: 20rem;
-  }
-
-  #footer-card-header {
-    margin-top: 1rem;
-  }
-
   #footer-subcard {
-    margin-top: 2rem;
+    margin-top: 2.4rem;
   }
 }
 
 @media (max-width: 540px) {
-  #footer-content-m li {
-    font-size: 3.5vw;
-    margin-left: 1rem;
-    margin-top: 0.6rem;
-  }
-
-  #footer-card p {
-    margin-top: 1.5rem;
-    margin-left: 1rem;
-    font-size: 15px;
-    width: 20rem;
-  }
-
-  #footer-card-header {
-    margin-top: 1rem;
-  }
-
   #footer-subcard {
-    margin-top: 2rem;
-  }
-
-  .copyright p {
-    margin-left: 8rem;
+    margin-top: 2.5rem;
   }
 
   #footer-subcard-logo {
@@ -954,104 +858,18 @@
   }
 }
 
-@media (max-width:525px) {
-  #footer-card p {
-    font-size: 13px;
-    margin-top: .7rem;
-  }
-}
-
-@media (max-width:500px) {
-  #footer-card-header {
-    margin-top: 1rem;
-    padding: 5px;
-    height: 2.5rem;
-    width: 11rem;
-  }
-
-  #footer-card p {
-    font-size: 13px;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-  }
-
-  #footer-subcard {
-    margin-top: 2rem;
-  }
-
+@media (max-width: 500px) {
   #footer-subcard-logo {
-    height: 40px;
-    width: 50px;
+    height: 32px;
+    width: 32px;
     margin-left: -1rem;
   }
 }
 
-@media (max-width: 484px) {
-
-  .copyright p {
-    margin-left: 5rem;
-  }
-
-  #footer-card-header {
-    width: 40vw;
-    padding-right: 5px;
-  }
-
-  #footer-card {
-    margin-top: 1rem;
-  }
-
-  #footer-card p {
-    margin-top: 8px;
-  }
-}
-
-@media (max-width: 456px) {
-  #footer-card p {
-    font-size: 12px;
-  }
-
-  #footer-card-header {
-    margin-top: .6rem;
-    height: 2.5rem;
-    width: 11rem;
-  }
-
-  #footer-subcard {
-    margin-top: 1.5rem;
-  }
-
-  .foot-links {
-    margin-top: -.6rem;
-  }
-}
-
-@media (max-width:425px) {
-
+@media (max-width: 425px) {
   .foot-links {
     margin-left: 1rem;
-    margin-top: -.7rem;
-  }
-
-  #footer-content-m li {
-    font-size: 3vw;
-    margin-right: 4rem;
-    margin-top: 0.6rem;
-  }
-
-  #footer-card {
-    margin-top: 1rem;
-  }
-
-  #footer-card p {
-    margin-top: 1rem;
-    margin-left: 1rem;
-    font-size: 11.5px;
-    width: 20rem;
-  }
-
-  #footer-card-header {
-    margin-top: 1rem;
+    margin-top: -0.7rem;
   }
 
   .raceline {
@@ -1059,122 +877,41 @@
   }
 
   #footer-subcard {
-    margin-top: 2rem;
-  }
-
-  .copyright p {
-    margin-left: 4.5rem;
-    font-size: 14px;
+    margin-top: 2.2rem;
   }
 
   #footer-subcard-logo {
     height: 30px;
-    width: 40px;
-    margin-left: -1.5rem;
+    width: 30px;
   }
 
-  #footer-subcard-logo>img {
-    height: 25px;
-  }
-}
-
-@media (max-width:415px) {
-  #footer-card p {
-    margin-top: 8px;
-    font-size: 10px;
-  }
-
-  #footer-card-header {
-    margin-top: 8px;
+  #footer-subcard-logo > img {
+    height: 20px;
   }
 }
 
-@media(max-width:400px) {
-  .copyright p {
-    margin-left: 3rem;
-  }
-}
-
-@media(max-width:390px) {
-  #footer-card p {
-    margin-top: .6rem;
-    margin-left: 1rem;
-    font-size: 10px;
-    width: 20rem;
-  }
-
-  #footer-subcard-content h4 {
-    font-size: 1rem;
-  }
-
-  .left-side p {
-    margin-top: -1px;
-    font-size: 12px;
-  }
-
+@media (max-width: 390px) {
   #footer-subcard-logo {
     height: 25px;
     width: 30px;
     margin-left: -1.5rem;
   }
-
-  #footer-subcard-logo>img {
-    height: 20px;
-  }
-
-  .copyright p {
-    margin-left: 3rem;
-    font-size: 13px;
-  }
-
-  #footer-card-header {
-    margin-top: .6rem;
-  }
 }
 
-@media(max-width:383px) {
+@media (max-width: 383px) {
   .raceline {
     width: 7rem;
   }
-
-  #footer-card-header {
-    width: 12rem;
-    height: 2.3rem;
-  }
-
-  #footer-card p {
-    margin-top: 5px;
-    font-size: 11px;
-  }
-
-  #footer-subcard {
-    margin-top: 1.4rem;
-  }
 }
 
-@media(max-width:360px) {
-  #footer-card p {
-    margin-top: .3rem;
-    margin-left: 1rem;
-    font-size: 11px;
-  }
-
-  #footer-subcard-content h4 {
-    font-size: .8rem;
-  }
-
-  .left-side p {
-    margin-top: -1px;
-    font-size: 10px;
-  }
-
+@media (max-width: 360px) {
   #footer-subcard-logo {
     height: 25px;
     width: 30px;
     margin-left: -1.5rem;
   }
 
-  #footer-subcard-logo>img {
+  #footer-subcard-logo > img {
     height: 20px;
   }
 
@@ -1183,58 +920,19 @@
     width: 6rem;
   }
 
-  .copyright p {
-    margin-left: 1rem;
-    font-size: 13px;
-  }
-
-  #footer-card-header {
-    margin-top: .6rem;
-    height: 2.7rem;
-    padding-top: 1px;
-  }
-
-  #footer-subcard {
-    margin-top: 1rem;
-  }
-
   .foot-links {
     margin-left: 1rem;
-    margin-top: -.9rem;
-  }
-
-  #footer-content-m li {
-    font-size: 3vw;
-    margin-right: 3rem;
-    /* margin-top: 0.6rem; */
+    margin-top: -0.9rem;
   }
 }
 
-@media(max-width:340px) {
-
-  #footer-card p {
-    margin-top: .6rem;
-    margin-left: .5rem;
-    font-size: 9px;
-    width: 30rem;
-  }
-
-  #footer-subcard-content h4 {
-    font-size: .7rem;
-  }
-
-  .left-side p {
-    margin-top: -1px;
-    font-size: 8px;
-  }
-
+@media (max-width: 340px) {
   #footer-subcard-logo {
     height: 25px;
-    width: 30px;
-    margin-left: -1.5rem;
+    width: 25px;
   }
 
-  #footer-subcard-logo>img {
+  #footer-subcard-logo > img {
     height: 20px;
   }
 
@@ -1243,29 +941,8 @@
     width: 5rem;
   }
 
-  .copyright p {
-    margin-left: .5rem;
-    font-size: 12px;
-  }
-
-  #footer-card-header {
-    margin-top: .6rem;
-    height: 2.4rem;
-    padding-top: 1px;
-  }
-
-  #footer-subcard {
-    margin-top: 1rem;
-  }
-
   .foot-links {
     margin-left: 1rem;
-    margin-top: -.9rem;
-  }
-
-  #footer-content-m li {
-    font-size: 3vw;
-    margin-right: 3rem;
-    /* margin-top: 0.6rem; */
+    margin-top: -0.9rem;
   }
 }
