--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -56,7 +56,8 @@ header>nav>ul {
 #hamburger-menu-wrapper {
   display: none;
 }
-#navbarlogo{
+
+#navbarlogo {
   display: none;
 }
 
@@ -86,6 +87,10 @@ header>nav>ul {
 } */
 .navbar-logo {
   display: none;
+}
+
+#doc-nav a {
+  color: rgba(121, 121, 121, 1);
 }
 
 .navbar-menu ul {
@@ -849,7 +854,7 @@ p {
 
 #final-content-wrapper {
   display: flex;
-   width: 74%;
+  width: 74%;
   margin: auto;
   gap: 220px;
   align-items: center;
