--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -247,7 +247,7 @@ body {
   font-size: 14.25rem;
   font-weight: 500;
   -webkit-text-stroke: 2px #d21717;
-  color: #0a0a0a;
+  color: black;
 }
 .trophy2 {
   width: 188px;
@@ -557,7 +557,7 @@ body {
 }
 .al-pn-border {
   height: 4px;
-  width: 560px;
+  width: 509px;
   background-color: #d21717;
   margin-top: 18px;
 }
@@ -594,6 +594,15 @@ body {
   .about-contact {
     overflow-x: hidden;
   }
+}
+@media (min-width:1800px) {
+  .about-cc-1{
+    left: 0%;
+  }
+  .about-cc-2{
+    left: 0%;
+  }
+  
 }
 /* between 1700px and 1806px */
 @media (min-width: 1700px) and (max-width: 1806px) {
@@ -772,6 +781,12 @@ body {
 }
 /* between 1400px to 1499px */
 @media (min-width: 1400px) and (max-width: 1499px) {
+  .about-cc-1{
+    left:0%;
+  }
+  .about-cc-2{
+    left:0%;
+  }
   #about-vertical-title {
     display: none;
   }
@@ -979,6 +994,12 @@ body {
 }
 /* between 1300px to 1399px */
 @media (min-width: 1300px) and (max-width: 1400px) {
+  .about-cc-1{
+    left:0%;
+  }
+  .about-cc-2{
+    left:0%;
+  }
   #about-vertical-title {
     display: none;
   }
@@ -1188,6 +1209,12 @@ body {
 }
 /* between 1200px to 1299px */
 @media (min-width: 1200px) and (max-width: 1300px) {
+  .about-cc-1{
+    left:0%;
+  }
+  .about-cc-2{
+    left:0%;
+  }
   #about-vertical-title {
     display: none;
   }
@@ -1395,6 +1422,12 @@ body {
 }
 /* between 1100 px to 1200px */
 @media (min-width: 1100px) and (max-width: 1200px) {
+  .about-cc-1{
+    left:0%;
+  }
+  .about-cc-2{
+    left:0%;
+  }
   #about-vertical-title {
     display: none;
   }
@@ -1804,9 +1837,11 @@ body {
   }
   .about-cc-1{
     font-size: 4.0625rem;
+    left: 0%;
   }
   .about-cc-2{
     font-size: 5.375rem;
+    left: 0%;
   }
   /* 1200 */
   .about-contact-details-1200 {
@@ -2068,9 +2103,11 @@ body {
   }
   .about-cc-1{
     font-size: 4.0625rem;
+    left: 0%;
   }
   .about-cc-2{
     font-size: 5.375rem;
+    left: 0%;
   }
   /* 1200 */
   .about-contact-details-1200 {
@@ -2364,9 +2401,12 @@ body {
   }
   .about-cc-1{
     font-size: 3.0625rem;
+    left: 0%;
   }
   .about-cc-2{
     font-size: 4.375rem;
+    left: 0%;
+
   }
   /* 1200 */
   .about-contact-details-1200 {
