--- a/assets/styles/toc-mobile.css
+++ b/assets/styles/toc-mobile.css
@@ -1,114 +1,213 @@
 @media (max-width: 800px) {
-    main {
-        width: 90%;
-        padding-bottom: 70px;
-    }
+  main {
+    width: 90%;
+    padding-bottom: 70px;
+  }
 
-    #red-line {
-        display: none;
-    }
+  #red-line {
+    display: none;
+  }
 
-    #doc-nav {
-        display: none;
-    }
+  #doc-nav {
+    display: none;
+  }
 
-    #doc-nav-wrapper h1 {
-        width: auto;
-        margin: auto;
-        font-size: 28px;
-    }
+  #doc-nav-wrapper h1 {
+    width: auto;
+    margin: auto;
+    font-size: 28px;
+  }
 
-    #toc {
-        padding: 15px;
-        padding-bottom: 55px;
-    }
+  #toc {
+    padding: 15px;
+    padding-bottom: 55px;
+  }
 
-    #toc-section-header h1 {
-        display: none;
-    }
+  #toc-section-header h1 {
+    display: none;
+  }
 
-    .clause-wrapper {
-        margin-bottom: 60px;
-    }
+  .clause-wrapper {
+    margin-bottom: 60px;
+  }
 
-    .clause-wrapper h4 {
-        margin-top: 26px;
-        margin-bottom: 0;
-        font-size: 20px;
-    }
+  .clause-wrapper h4 {
+    margin-top: 26px;
+    margin-bottom: 0;
+    font-size: 20px;
+  }
 
-    .clause-wrapper h6 {
-        font-size: 18px;
-        margin-top: 26px;
-    }
+  .clause-wrapper h6 {
+    font-size: 18px;
+    margin-top: 26px;
+  }
 
-    .clause-wrapper h1 {
-        margin-left: 0;
-        margin-bottom: 10px;
-    }
+  .clause-wrapper h1 {
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
 
-    .clause-wrapper ul {
-        margin-bottom: 18px;
-    }
+  .clause-wrapper ul {
+    margin-bottom: 18px;
+  }
 
-    .clause-wrapper span {
-        width: 36px;
-    }
+  .clause-wrapper span {
+    width: 36px;
+  }
 
-    #toc p {
-        margin-top: 12px;
-        font-size: 14px;
-    }
+  #toc p {
+    margin-top: 12px;
+    font-size: 14px;
+  }
 
-    #fch {
-        margin-top: 60px;
-    }
+  #fch {
+    margin-top: 60px;
+  }
 
-    #doc-nav-wrapper {
-        padding: 12px;
-    }
+  #doc-nav-wrapper {
+    padding: 12px;
+  }
 
-    #toc #top-p {
-        margin-top: 24px;
-        color: #ffffff;
-    }
+  #toc #top-p {
+    margin-top: 24px;
+    color: #ffffff;
+  }
 
-    #mobile-dropdown {
-        display: block;
-        width: 210px;
-        border-bottom: 3px solid white;
-        margin: auto;
-        margin-bottom: 18px;
-        margin-top: 15px;
-    }
+  #mobile-dropdown {
+    display: block;
+    width: 210px;
+    border-bottom: 3px solid white;
+    margin: auto;
+    margin-bottom: 18px;
+    margin-top: 15px;
+  }
 
-    #mobile-dropdown select {
-        display: block;
-        margin: auto;
-        font-family: formula-reg;
-        background-color: transparent;
-        color: #ffffff;
-        border: none;
-        font-size: 16px;
-        padding: 10px;
-        width: 85%;
-    }
+  #mobile-dropdown select {
+    display: block;
+    margin: auto;
+    font-family: formula-reg;
+    background-color: transparent;
+    color: #ffffff;
+    border: none;
+    font-size: 16px;
+    padding: 10px;
+    width: 85%;
+  }
 
-    #updated-date {
-        display: flex;
-        align-items: baseline;
-        position: relative;
-        top: 15px;
-    }
+  #updated-date {
+    display: flex;
+    align-items: baseline;
+    position: relative;
+    top: 15px;
+  }
 
-    #semicolon {
-        display: block;
-        color: #A5A5A5;
-        margin-right: 5px;
-    }
-    #drop-arrow > img{
-        display: unset;
-    }
-    
-
+  #semicolon {
+    display: block;
+    color: #a5a5a5;
+    margin-right: 5px;
+  }
+  #drop-arrow > img {
+    display: unset;
+  }
+  #mobile-dropdown-terms {
+    width: 255px;
+    height: 36px;
+    /* border: 2px solid blue; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px auto;
+    position: relative;
+  }
+  .md-img {
+    width: 18px;
+    height: 10px;
+  }
+  .md-terms {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 218px;
+  }
+  .md-terms > p {
+    color: #fff;
+    font-family: formula-reg;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  .md-border {
+    width: 100%;
+    height: 4px;
+    margin-top: 11px;
+    background-color: #fff;
+  }
+  .dropdown-m-menu {
+    position: absolute;
+    /* border: 2px solid red; */
+    top: 100%;
+    width: 90vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: #0a0a0a;
+    z-index: 10;
+    height:276px;
+    transform:translateX(-110%);
+    /* transition: transform 0.1s; */
+  }
+  .open-menu{
+    /* display:unset; */
+    transform: translateX(0%);
+  }
+  .dr-top{
+    padding-top:30px;
+  }
+  .dr-bottom{
+    padding-bottom:40px;
+  }
+  .dropdown-m-border {
+    display: block;
+    width: 49px;
+    height: 2px;
+    background-color: #fff;
+  }
+  .dropdown-m-links {
+    color: #787878;
+    font-family:formula-reg;
+    font-size: 16px;
+    font-weight: 400;
+  }
+}
+@media screen and (max-width: 515px) {
+  .table-toc {
+    display: none;
+  }
+  .table-mobile {
+    display: block;
+    border: 4px solid #bababa;
+    width: 79vw;
+    margin-top:1rem;
+    /* height:100px; */
+  }
+  .table-content {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .table-content-1 {
+    color: #ffffff !important;
+    font-weight: 500 !important;
+    font-size: 1.2rem !important;
+  }
+  .table-content-2 {
+    color: #bababa !important;
+    font-size: 1rem !important;
+  }
+  .table-border-mobile {
+    margin-top: 2px;
+    height: 2px;
+    width: 100%;
+    background-color: #bababa;
+  }
 }
