--- a/assets/styles/toc.css
+++ b/assets/styles/toc.css
@@ -229,8 +229,12 @@ td {
 
 .active {
   color: white;
-  text-decoration: underline;
-  text-underline-offset: 10px;
+}
+
+.half-line {
+  height: 3px;
+  width: 4.5vw;
+  background-color: white;
 }
 
 @media (max-width: 1200px) {
